Setup hero section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/04341be7b8.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Hello World!!</h1>
-    <h2>My name is Elin</h2>
+    <div class="hero">
+      <p>I am</p>
+      <h1>Elin Blütecher Holter</h1>
+      <h2>Oslo, Norway</h2>
+    </div>
   </body>
 </html>
