--- a/index.html
+++ b/index.html
@@ -5,34 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
 
-    <!-- Bootstrap -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     />
 
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;700&family=Montserrat:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/04341be7b8.js"
       crossorigin="anonymous"
     ></script>
 
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/style.css" />
-    <!-- Bootstrap JS (For navbar og toggler) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
 
   <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Elin Blütecher Holter</a>
@@ -42,33 +33,29 @@
           data-toggle="collapse"
           data-target="#navbarNav"
         >
-          <span class="navbar-toggler-icon"></span>
+          <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
-              <!-- Linker til about.html -->
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
-              <!-- Linker til projects.html -->
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
-              <!-- Linker til contact.html -->
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Hero Section -->
     <div class="hero">
-      <p>I am</p>
+      <p class="hero-subtitle">I am</p>
       <h1>Elin Blütecher Holter</h1>
       <h2>Oslo, Norway</h2>
 
@@ -82,7 +69,72 @@
       </div>
     </div>
 
-    <!-- JavaScript -->
+    <section class="projects-section">
+      <div class="container">
+        <h2 class="section-title">My Projects</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="project-card">
+              <img
+                src="images/project1.jpg"
+                alt="Project 1"
+                class="project-image"
+              />
+              <div class="project-info">
+                <h3 class="project-title">Weather App</h3>
+                <p class="project-description">
+                  A sleek weather application built with JavaScript and
+                  OpenWeather API.
+                </p>
+                <a href="#" class="read-more">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="project-card">
+              <img
+                src="images/project2.jpg"
+                alt="Project 2"
+                class="project-image"
+              />
+              <div class="project-info">
+                <h3 class="project-title">Portfolio Website</h3>
+                <p class="project-description">
+                  A fully responsive portfolio showcasing my work in frontend,
+                  XR, and design.
+                </p>
+                <a href="#" class="read-more">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="social-icons">
+          <a
+            href="www.linkedin.com/in/elin-blütecher-holter"
+            target="_blank"
+            aria-label="LinkedIn"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a
+            href="https://github.com/Elinblu"
+            target="_blank"
+            aria-label="GitHub"
+            ><i class="fab fa-github"></i
+          ></a>
+        </div>
+        <p>Coded by Elin Blütecher Holter</p>
+      </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
