--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="container">
         <div class="social-icons">
           <a
-            href="www.linkedin.com/in/elin-blütecher-holter"
+            href="https://www.linkedin.com/in/elin-bl%C3%BCtecher-holter/"
             target="_blank"
             aria-label="LinkedIn"
             ><i class="fab fa-linkedin"></i
