--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     />
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@400;700&family=Montserrat:wght@300;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
 
@@ -26,39 +29,31 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Elin Blütecher Holter</a>
+        <a class="navbar-brand" href="#">Elin Blütecher Holter</a>
         <button
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="hero">
-      <p class="hero-subtitle">I am</p>
+    <section class="hero">
       <h1>Elin Blütecher Holter</h1>
-      <h2>Oslo, Norway</h2>
-
       <div class="sliding-text">
         <span class="word active">I design, develop, and experiment.</span>
         <span class="word">I blend creativity with technology.</span>
@@ -67,74 +62,44 @@
         <span class="word">I learn, I create, I iterate.</span>
         <span class="word">Always learning, always building.</span>
       </div>
-    </div>
+    </section>
 
     <section class="projects-section">
-      <div class="container">
-        <h2 class="section-title">My Projects</h2>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="project-card">
-              <img
-                src="images/project1.jpg"
-                alt="Project 1"
-                class="project-image"
-              />
-              <div class="project-info">
-                <h3 class="project-title">Weather App</h3>
-                <p class="project-description">
-                  A sleek weather application built with JavaScript and
-                  OpenWeather API.
-                </p>
-                <a href="#" class="read-more">Read More</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="project-card">
-              <img
-                src="images/project2.jpg"
-                alt="Project 2"
-                class="project-image"
-              />
-              <div class="project-info">
-                <h3 class="project-title">Portfolio Website</h3>
-                <p class="project-description">
-                  A fully responsive portfolio showcasing my work in frontend,
-                  XR, and design.
-                </p>
-                <a href="#" class="read-more">Read More</a>
-              </div>
-            </div>
-          </div>
+      <h2 class="section-title">My Work</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <img src="images/project1.jpg" alt="Weather App" />
+          <h3>Weather App</h3>
+          <p>A sleek weather app built with JavaScript and OpenWeather API.</p>
+        </div>
+        <div class="project-card">
+          <img src="images/project2.jpg" alt="Portfolio Website" />
+          <h3>Portfolio Website</h3>
+          <p>
+            A fully responsive portfolio showcasing my work in frontend, XR, and
+            design.
+          </p>
+        </div>
+        <div class="project-card">
+          <img src="images/project3.jpg" alt="VR Experience" />
+          <h3>VR Experience</h3>
+          <p>An immersive VR project built using Unity and C#.</p>
         </div>
       </div>
     </section>
 
     <footer class="footer">
-      <div class="container">
-        <div class="social-icons">
-          <a
-            href="https://www.linkedin.com/in/elin-bl%C3%BCtecher-holter/"
-            target="_blank"
-            aria-label="LinkedIn"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-          <a
-            href="https://github.com/Elinblu"
-            target="_blank"
-            aria-label="GitHub"
-            ><i class="fab fa-github"></i
-          ></a>
-        </div>
-        <p>Coded by Elin Blütecher Holter</p>
+      <p>© 2025 Elin Blütecher Holter</p>
+      <div class="social-icons">
+        <a href="https://linkedin.com" target="_blank"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
       </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
