--- a/index.html
+++ b/index.html
@@ -9,27 +9,24 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     />
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
-
     <script
       src="https://kit.fontawesome.com/04341be7b8.js"
       crossorigin="anonymous"
     ></script>
-
     <link rel="stylesheet" href="styles/style.css" />
   </head>
 
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Elin Blütecher Holter</a>
+        <a class="navbar-brand" href="index.html">Elin Blütecher Holter</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,10 +40,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -55,15 +60,16 @@
     <section class="hero">
       <h1>Elin Blütecher Holter</h1>
       <div class="sliding-text">
-        <span class="word active">I design, develop, and experiment.</span>
-        <span class="word">I blend creativity with technology.</span>
-        <span class="word">I create interactive experiences.</span>
-        <span class="word">I build, animate, and explore.</span>
-        <span class="word">I learn, I create, I iterate.</span>
-        <span class="word">Always learning, always building.</span>
+        <div class="word active">I design, develop, and experiment.</div>
+        <div class="word">I blend creativity with technology.</div>
+        <div class="word">I create interactive experiences.</div>
+        <div class="word">I build, animate, and explore.</div>
+        <div class="word">I learn, I create, I iterate.</div>
+        <div class="word">Always learning, always building.</div>
       </div>
     </section>
 
+    <!-- Projects Section -->
     <section class="projects-section">
       <h2 class="section-title">My Work</h2>
       <div class="projects-grid">
@@ -88,6 +94,7 @@
       </div>
     </section>
 
+    <!-- Footer -->
     <footer class="footer">
       <p>© 2025 Elin Blütecher Holter</p>
       <div class="social-icons">
