--- a/about.html
+++ b/about.html
@@ -2,17 +2,140 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About - Elin Blütecher Holter</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Poppins:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/04341be7b8.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div class="sliding-text">
-      <span class="word">Designer, Developer, Explorer.</span>
-      <span class="word">Graphic Design ✦ Animation ✦ Code.</span>
-      <span class="word">UX, UI, XR, and Everything Between.</span>
-      <span class="word">From Frontend to VR, I build it all.</span>
-      <span class="word">I craft pixels and code experiences.</span>
-    </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Elin Blütecher Holter</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+        >
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- About Section -->
+    <section class="about">
+      <div class="container">
+        <h1>About</h1>
+        <div class="about-content">
+          <div class="profile-image">
+            <img src="images/meg .png" alt="Elin Blütecher Holter" />
+          </div>
+          <div class="bio">
+            <p>
+              Hello! I’m Elin, a designer and technologist specializing in
+              immersive technologies, user experience design, and 3D graphics.
+            </p>
+            <p>
+              In 2023, I earned my Master’s degree in Virtual & Augmented
+              Reality from Goldsmiths, University of London, where I explored
+              how XR can transform interactive environments into intuitive,
+              engaging, and accessible experiences.
+            </p>
+            <p>
+              I love combining creativity and technology to build interactive
+              experiences.
+            </p>
+            <a href="cv.pdf" class="btn-download">Download CV</a>
+          </div>
+        </div>
+
+        <!-- Skills Section -->
+        <div class="skills">
+          <h2>Skills</h2>
+          <div class="skill-list">
+            <span>Adobe After Effects</span>
+            <span>Adobe Photoshop</span>
+            <span>Adobe Illustrator</span>
+            <span>Adobe InDesign</span>
+            <span>Adobe Premiere Pro</span>
+            <span>Adobe XD</span>
+            <span>Unity</span>
+            <span>Figma</span>
+            <span>Blender</span>
+            <span>HTML & CSS</span>
+            <span>JavaScript</span>
+            <span>UX/UI</span>
+          </div>
+        </div>
+
+        <!-- Timeline -->
+        <div class="timeline">
+          <h2>Experience</h2>
+          <div class="timeline-item">
+            <span class="date">2023</span>
+            <p>
+              Master’s Degree in Virtual & Augmented Reality, Goldsmiths,
+              University of London
+            </p>
+          </div>
+          <div class="timeline-item">
+            <span class="date">2022</span>
+            <p>
+              Bachelor’s Degree in Graphic Design & Animation, University of
+              Huddersfield
+            </p>
+          </div>
+          <div class="timeline-item">
+            <span class="date">2021-2024</span>
+            <p>Freelance Designer & Developer</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <p>© 2025 Elin Blütecher Holter</p>
+      <div class="social-icons">
+        <a href="https://linkedin.com" target="_blank"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
+      </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script src="script.js"></script>
   </body>
 </html>
