--- a/contact.html
+++ b/contact.html
@@ -71,17 +71,13 @@
           Want to collaborate or have any questions? Feel free to reach out!
         </p>
 
-        <!-- Netlify Forms Setup -->
-        <form name="contact" method="POST" data-netlify="true">
-          <div class="input-group">
-            <input type="text" name="name" placeholder="Name" required />
-          </div>
-          <div class="input-group">
-            <input type="email" name="email" placeholder="Email" required />
-          </div>
-          <div class="input-group">
-            <textarea name="message" placeholder="Say Hi" required></textarea>
-          </div>
+        <form
+          action="https://formsubmit.co/e_blu1797@hotmail.com"
+          method="POST"
+        >
+          <input type="text" name="name" placeholder="Name" required />
+          <input type="email" name="email" placeholder="Email" required />
+          <textarea name="message" placeholder="Say Hi" required></textarea>
           <button type="submit" class="btn-send">Send</button>
         </form>
       </div>
