--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,15 @@
           action="https://formsubmit.co/e_blu1797@hotmail.com"
           method="POST"
         >
-          <input type="text" name="name" placeholder="Name" required />
-          <input type="email" name="email" placeholder="Email" required />
-          <textarea name="message" placeholder="Say Hi" required></textarea>
+          <div class="input-group">
+            <input type="text" name="name" placeholder="Name" required />
+          </div>
+          <div class="input-group">
+            <input type="email" name="email" placeholder="Email" required />
+          </div>
+          <div class="input-group">
+            <textarea name="message" placeholder="Say Hi" required></textarea>
+          </div>
           <button type="submit" class="btn-send">Send</button>
         </form>
       </div>
