--- a/about.html
+++ b/about.html
@@ -20,32 +20,43 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/style.css" />
+
+        <!-- Open Graph for Social Media -->
+    <meta property="og:title" content="About Elin Blütecher Holter | UX, XR & Frontend Developer" />
+    <meta property="og:description" content="Explore the background of Elin Blütecher Holter, a designer and technologist with a passion for UI/UX, XR, and frontend development." />
+    <meta property="og:image" content="images/meg.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourwebsite.com/about.html" />
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Elin Blütecher Holter",
+        "jobTitle": "UX, XR & Frontend Developer",
+              "sameAs": [
+          "https://www.linkedin.com/in/elin-bl%C3%BCtecher-holter/",
+          "https://github.com/Elinblu"
+        ]
+      }
+    </script>
   </head>
   <body>
     <!-- Navbar -->
+     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Elin Blütecher Holter</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-        >
+        <a class="navbar-brand" href="index.html">Elin Blütecher Holter</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="work.html">Work</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -53,7 +64,7 @@
 
   <section class="about">
   <div class="container">
-    <h1>About</h1>
+            <h1>About Elin Blütecher Holter - UX, XR & Frontend Developer</h1>
     <div class="row">
       <div class="col-lg-12">
         <div class="about-content">
