--- a/index.html
+++ b/index.html
@@ -3,22 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
 
+    <!-- SEO Optimalization -->
+    <title>Elin Blütecher Holter - Portfolio | Design, Development & XR</title>
+    <meta
+      name="description"
+      content="Elin Blütecher Holter - Designer and technologist specializing in XR, UI/UX, and frontend development. Explore my portfolio and projects in immersive tech and digital design."
+    />
+    <meta
+      name="keywords"
+      content="Elin Blütecher Holter, Portfolio, UX Designer, XR, Frontend Developer, UI Design, Virtual Reality, Augmented Reality"
+    />
+    <meta name="author" content="Elin Blütecher Holter" />
+
+    <!-- Open Graph (OG) for Social Media -->
+    <meta property="og:title" content="Elin Blütecher Holter - Portfolio" />
+    <meta
+      property="og:description"
+      content="Portfolio showcasing design, UI/UX, XR, and frontend development projects."
+    />
+    <meta
+      property="og:image"
+      content="https://yourwebsite.com/images/portfolio-thumbnail.jpg"
+    />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Elin Blütecher Holter - Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Explore my work in design, frontend, and XR development."
+    />
+    <meta
+      name="twitter:image"
+      content="https://yourwebsite.com/images/portfolio-thumbnail.jpg"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
+
+    <!-- FontAwesome for Icons -->
     <script
       src="https://kit.fontawesome.com/04341be7b8.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
 
@@ -26,31 +70,33 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Elin Blütecher Holter</a>
+        <a class="navbar-brand" href="index.html" title="Go to Home"
+          >Elin Blütecher Holter</a
+        >
         <button
           class="navbar-toggler"
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
         >
           <i class="fas fa-bars"></i>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="index.html" title="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html" title="About me">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link" href="work.html" title="My Work">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html" title="Contact me"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -63,8 +109,6 @@
         <div class="word active">I design, develop, and experiment.</div>
         <div class="word">I blend creativity with technology.</div>
         <div class="word">I create interactive experiences.</div>
-        <div class="word">I build, animate, and explore.</div>
-        <div class="word">I learn, I create, I iterate.</div>
         <div class="word">Always learning, always building.</div>
       </div>
     </section>
@@ -74,12 +118,18 @@
       <h2 class="section-title">My Work</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="images/project1.jpg" alt="Weather App" />
+          <img
+            src="images/project1.jpg"
+            alt="Weather App displaying live weather updates"
+          />
           <h3>Weather App</h3>
           <p>A sleek weather app built with JavaScript and OpenWeather API.</p>
         </div>
         <div class="project-card">
-          <img src="images/project2.jpg" alt="Portfolio Website" />
+          <img
+            src="images/project2.jpg"
+            alt="Portfolio website showcasing UI/UX projects"
+          />
           <h3>Portfolio Website</h3>
           <p>
             A fully responsive portfolio showcasing my work in frontend, XR, and
@@ -87,7 +137,10 @@
           </p>
         </div>
         <div class="project-card">
-          <img src="images/project3.jpg" alt="VR Experience" />
+          <img
+            src="images/project3.jpg"
+            alt="VR experience developed in Unity with C#"
+          />
           <h3>VR Experience</h3>
           <p>An immersive VR project built using Unity and C#.</p>
         </div>
@@ -98,10 +151,10 @@
     <footer class="footer">
       <p>© 2025 Elin Blütecher Holter</p>
       <div class="social-icons">
-        <a href="https://linkedin.com" target="_blank"
+        <a href="https://linkedin.com" target="_blank" title="LinkedIn Profile"
           ><i class="fab fa-linkedin"></i
         ></a>
-        <a href="https://github.com" target="_blank"
+        <a href="https://github.com" target="_blank" title="GitHub Profile"
           ><i class="fab fa-github"></i
         ></a>
       </div>
