--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Elin Blütecher Holter</title>
+    <title>Contact | Elin Blütecher Holter - UX, XR & Frontend</title>
 
-    <!-- Bootstrap CSS -->
+    <meta
+      name="description"
+      content="Want to collaborate or have a question? Get in touch with Elin Blütecher Holter for UX, XR, and frontend projects."
+    />
+    <meta
+      name="keywords"
+      content="Elin Blütecher Holter contact, UX designer, frontend developer, XR projects"
+    />
+    <meta name="author" content="Elin Blütecher Holter" />
+
+    <!-- Open Graph for Social Media -->
+    <meta
+      property="og:title"
+      content="Contact | Elin Blütecher Holter - UX, XR & Frontend"
+    />
+    <meta
+      property="og:description"
+      content="Reach out for collaboration or inquiries about UX, XR, and frontend development."
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Elin Blütecher Holter",
+        "jobTitle": "UX, XR & Frontend Developer",
+        "sameAs": [
+          "https://www.linkedin.com/in/elin-bl%C3%BCtecher-holter/",
+          "https://github.com/Elinblu"
+        ]
+      }
+    </script>
+
+    <!-- Styles & Scripts -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     />
-
-    <!-- Google Fonts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
-
-    <!-- FontAwesome for Icons -->
     <script
       src="https://kit.fontawesome.com/04341be7b8.js"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
 
@@ -37,13 +68,9 @@
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
         >
           <i class="fas fa-bars"></i>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -53,7 +80,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Work</a>
+              <a class="nav-link" href="work.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="contact.html">Contact</a>
@@ -89,18 +116,16 @@
       </div>
     </section>
 
-    <!-- Bootstrap JS  -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
-
     <!-- Footer -->
     <footer class="footer">
       <p>© 2025 Elin Blütecher Holter</p>
       <div class="social-icons">
-        <a href="https://linkedin.com" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/elin-bl%C3%BCtecher-holter/"
+          target="_blank"
           ><i class="fab fa-linkedin"></i
         ></a>
-        <a href="https://github.com" target="_blank"
+        <a href="https://github.com/Elinblu" target="_blank"
           ><i class="fab fa-github"></i
         ></a>
       </div>
