--- a/work.html
+++ b/work.html
@@ -3,27 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Elin Blütecher Holter</title>
+    <title>Work | Elin Blütecher Holter - UX, XR & Frontend Projects</title>
 
-    <!-- Bootstrap CSS -->
+    <meta
+      name="description"
+      content="Explore Elin Blütecher Holter's work in UX design, XR, animation, and frontend development. Featuring projects in Unity, JavaScript, and interactive design."
+    />
+    <meta
+      name="keywords"
+      content="Elin Blütecher Holter portfolio, UX design, frontend projects, XR, animation, Unity, JavaScript"
+    />
+    <meta name="author" content="Elin Blütecher Holter" />
+
+    <!-- Open Graph for Social Media -->
+    <meta
+      property="og:title"
+      content="Work | Elin Blütecher Holter - UX, XR & Frontend Projects"
+    />
+    <meta
+      property="og:description"
+      content="Showcasing projects in UX, XR, frontend development, and interactive design by Elin Blütecher Holter."
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Elin Blütecher Holter",
+        "jobTitle": "UX, XR & Frontend Developer",
+        "sameAs": [
+          "https://www.linkedin.com/in/elin-bl%C3%BCtecher-holter/",
+          "https://github.com/Elinblu"
+        ]
+      }
+    </script>
+
+    <!-- Styles & Scripts -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     />
-
-    <!-- Google Fonts -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&family=Poppins:wght@300;600&display=swap"
       rel="stylesheet"
     />
-
-    <!-- FontAwesome for Icons -->
     <script
       src="https://kit.fontawesome.com/04341be7b8.js"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/style.css" />
   </head>
 
@@ -37,13 +68,9 @@
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
         >
           <i class="fas fa-bars"></i>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -53,30 +80,71 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Work</a>
+              <a class="nav-link active" href="work.html">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!--WRITE HERE -->
+    <!-- Work Section -->
+    <section class="work-section">
+      <div class="container">
+        <h1>My Work</h1>
+        <p>
+          Here are some of my recent projects in UX, XR, and frontend
+          development.
+        </p>
 
-    <!-- Bootstrap JS (jQuery and Popper.js are required) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
+        <div class="projects-grid">
+          <!-- Project 1 -->
+          <div class="project-card">
+            <img
+              src="images/project1.jpg"
+              alt="Weather App - JavaScript & OpenWeather API"
+            />
+            <h3>Weather App</h3>
+            <p>
+              A sleek weather app built with JavaScript and OpenWeather API.
+            </p>
+          </div>
+
+          <!-- Project 2 -->
+          <div class="project-card">
+            <img
+              src="images/project2.jpg"
+              alt="Portfolio Website - UX & Frontend Design"
+            />
+            <h3>Portfolio Website</h3>
+            <p>
+              A fully responsive portfolio showcasing my work in frontend, XR,
+              and design.
+            </p>
+          </div>
+
+          <!-- Project 3 -->
+          <div class="project-card">
+            <img src="images/project3.jpg" alt="VR Experience - Unity & C#" />
+            <h3>VR Experience</h3>
+            <p>An immersive VR project built using Unity and C#.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
       <p>© 2025 Elin Blütecher Holter</p>
       <div class="social-icons">
-        <a href="https://linkedin.com" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/elin-bl%C3%BCtecher-holter/"
+          target="_blank"
           ><i class="fab fa-linkedin"></i
         ></a>
-        <a href="https://github.com" target="_blank"
+        <a href="https://github.com/Elinblu" target="_blank"
           ><i class="fab fa-github"></i
         ></a>
       </div>
