--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-          <i class="fas fa-bars"></i>
+          <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -161,5 +164,9 @@
     </footer>
 
     <script src="script.js"></script>
+    <!-- jQuery (må være før Bootstrap) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
