test for projects

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
       </div>
     </section>
 
+    <a href="project.html?id=weather-app">Weather App</a>
+    <a href="project.html?id=portfolio">Portfolio Website</a>
+    <a href="project.html?id=vr-experience">VR Experience</a>
+
     <!-- Footer -->
     <footer class="footer">
       <p>© 2025 Elin Blütecher Holter</p>
