Updated CSS, Home fixed, work page under development

--- a/about.html
+++ b/about.html
@@ -134,6 +134,9 @@
               <span>Adobe XD</span>
               <span>Figma</span>
               <span>Canva</span>
+              <span>Affinity Designer 2</span>
+              <span>Affinity Photo 2</span>
+              <span>Affinity Publisher 2</span>
             </div>
           </div>
 
@@ -186,8 +189,8 @@
     <div class="timeline-item">
       <div class="timeline-date"><i class="fas fa-city"></i> 2025 <i class="fa-solid fa-arrow-right"></i></div>
       <div class="timeline-content">
-        <h3>Planning to move to Oslo</h3>
-        <p>Currently living in Ski, 20 min outside the city.</p>
+        <h3>Moved to Oslo</h3>
+        <p>Started a life in the city!</p>
       </div>
     </div>
 
@@ -199,6 +202,15 @@
         <p>TV & Broadband – first office job.</p>
       </div>
     </div>
+
+ <!-- 2024 - GGD -->
+<div class="timeline-item">
+  <div class="timeline-date"><i class="fas fa-building"></i> 2024 <i class="fa-solid fa-arrow-right"></i></div>
+  <div class="timeline-content">
+    <h3>Girl Geek Dinner Oslo – Volunteer Work</h3>
+    <p>Designer and event assistant for Girl Geek Dinner Oslo.</p>
+  </div>
+</div>
 
     <!-- 2024 - AHO -->
     <div class="timeline-item">
