--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html" title="Go to Home"
-          >Elin Blütecher Holter</a
-        >
+        <a class="navbar-brand" href="index.html" title="Go to Home">
+          Elin Blütecher Holter
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -106,6 +106,7 @@
       </div>
     </nav>
 
+    <!-- Hero Section -->
     <section class="hero">
       <h1>Elin Blütecher Holter</h1>
       <div class="sliding-text">
@@ -120,15 +121,15 @@
     <section class="projects-section">
       <h2 class="section-title">My Work</h2>
       <div class="projects-grid">
-        <div class="project-card">
+        <a class="project-card" href="project.html?id=weather-app">
           <img
             src="images/project1.jpg"
             alt="Weather App displaying live weather updates"
           />
           <h3>Weather App</h3>
           <p>A sleek weather app built with JavaScript and OpenWeather API.</p>
-        </div>
-        <div class="project-card">
+        </a>
+        <a class="project-card" href="project.html?id=portfolio">
           <img
             src="images/project2.jpg"
             alt="Portfolio website showcasing UI/UX projects"
@@ -138,39 +139,34 @@
             A fully responsive portfolio showcasing my work in frontend, XR, and
             design.
           </p>
-        </div>
-        <div class="project-card">
+        </a>
+        <a class="project-card" href="project.html?id=vr-experience">
           <img
             src="images/project3.jpg"
             alt="VR experience developed in Unity with C#"
           />
           <h3>VR Experience</h3>
           <p>An immersive VR project built using Unity and C#.</p>
-        </div>
+        </a>
       </div>
     </section>
-
-    <a href="project.html?id=weather-app">Weather App</a>
-    <a href="project.html?id=portfolio">Portfolio Website</a>
-    <a href="project.html?id=vr-experience">VR Experience</a>
 
     <!-- Footer -->
     <footer class="footer">
       <p>© 2025 Elin Blütecher Holter</p>
       <div class="social-icons">
-        <a href="https://linkedin.com" target="_blank" title="LinkedIn Profile"
-          ><i class="fab fa-linkedin"></i
-        ></a>
-        <a href="https://github.com" target="_blank" title="GitHub Profile"
-          ><i class="fab fa-github"></i
-        ></a>
+        <a href="https://linkedin.com" target="_blank" title="LinkedIn Profile">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com" target="_blank" title="GitHub Profile">
+          <i class="fab fa-github"></i>
+        </a>
       </div>
     </footer>
 
+    <!-- Scripts -->
     <script src="script.js"></script>
-    <!-- jQuery (må være før Bootstrap) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
