--- a/work.html
+++ b/work.html
@@ -7,7 +7,7 @@
 
     <meta
       name="description"
-      content="Explore Elin Blütecher Holter's work in UX design, XR, animation, and frontend development. Featuring projects in Unity, JavaScript, and interactive design."
+      content="Explore Elin Blütecher Holter's work in UX design, XR, animation, and frontend development."
     />
     <meta
       name="keywords"
@@ -58,7 +58,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
 
-  <body>
+  <body id="work-page">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
@@ -102,39 +102,8 @@
           development.
         </p>
 
-        <div class="projects-grid">
-          <!-- Project 1 -->
-          <div class="project-card">
-            <img
-              src="images/project1.jpg"
-              alt="Weather App - JavaScript & OpenWeather API"
-            />
-            <h3>Weather App</h3>
-            <p>
-              A sleek weather app built with JavaScript and OpenWeather API.
-            </p>
-          </div>
-
-          <!-- Project 2 -->
-          <div class="project-card">
-            <img
-              src="images/project2.jpg"
-              alt="Portfolio Website - UX & Frontend Design"
-            />
-            <h3>Portfolio Website</h3>
-            <p>
-              A fully responsive portfolio showcasing my work in frontend, XR,
-              and design.
-            </p>
-          </div>
-
-          <!-- Project 3 -->
-          <div class="project-card">
-            <img src="images/project3.jpg" alt="VR Experience - Unity & C#" />
-            <h3>VR Experience</h3>
-            <p>An immersive VR project built using Unity and C#.</p>
-          </div>
-        </div>
+        <!-- Dynamically generated content will go here -->
+        <div class="projects-grid" id="projects-container"></div>
       </div>
     </section>
 
