added weather page

--- a/index.html
+++ b/index.html
@@ -121,13 +121,17 @@
     <section class="projects-section">
       <h2 class="section-title">My Work</h2>
       <div class="projects-grid">
-        <a class="project-card" href="project.html?id=weather-app">
-          <img
-            src="images/project1.jpg"
-            alt="Weather App displaying live weather updates"
-          />
+        <a class="project-card" href="projects/weather-app.html">
+          <img src="../images/weatherapp-frontpage.png" alt="Weather App" />
           <h3>Weather App</h3>
-          <p>A sleek weather app built with JavaScript and OpenWeather API.</p>
+          <p>
+            This weather app was built as part of my SheCodes project, using
+            JavaScript and the OpenWeather API to provide real-time weather data
+            and forecasts. The app allows users to search for any city and view
+            current weather, temperature, humidity, and a forecast for the next
+            days. This project helped me improve my skills in working with APIs
+            and responsive design.
+          </p>
         </a>
         <a class="project-card" href="project.html?id=portfolio">
           <img
