--- a/work.html
+++ b/work.html
@@ -102,10 +102,36 @@
           development.
         </p>
 
-        <!-- Dynamically generated content will go here -->
-        <div class="projects-grid" id="projects-container"></div>
-      </div>
-    </section>
+        <section class="projects-section">
+          <h2 class="section-title">My Work</h2>
+          <div class="projects-grid">
+            <a class="project-card" href="projects/weather-app.html">
+              <img src="../images/weatherapp-frontpage.png" alt="Weather App" />
+              <h3>Weather App</h3>
+              <p>
+                  This weather app was built as part of my SheCodes project, using
+            JavaScript and the OpenWeather API to provide real-time weather data
+            and forecasts. The app allows users to search for any city and view
+            current weather, temperature, humidity, and a forecast for the next
+            days. This project helped me improve my skills in working with APIs
+            and responsive design.
+              </p>
+            </a>
+            <a class="project-card" href="projects/portfolio.html">
+              <img src="images/portfolio.jpg" alt="Portfolio Website" />
+              <h3>Portfolio Website</h3>
+              <p>
+                A fully responsive portfolio showcasing my work in frontend, XR,
+                and design.
+              </p>
+            </a>
+            <a class="project-card" href="projects/vr-experience.html">
+              <img src="images/vr-experience.jpg" alt="VR Experience" />
+              <h3>VR Experience</h3>
+              <p>An immersive VR project built using Unity and C#.</p>
+            </a>
+          </div>
+        </section>
 
     <!-- Footer -->
     <footer class="footer">
