--- a/index.html
+++ b/index.html
@@ -133,12 +133,10 @@
             and responsive design.
           </p>
         </a>
-        <a class="project-card" href="project.html?id=portfolio">
-          <img
-            src="images/project2.jpg"
-            alt="Portfolio website showcasing UI/UX projects"
-          />
-          <h3>Portfolio Website</h3>
+        <a class="project-card" href="project/echo-explorer.html">
+          <img src="images/echo1.png" alt="VR singing project" />
+          <h3>Echo Explorer</h3>
+          <h4>A VR Singing Experience</h4>
           <p>
             A fully responsive portfolio showcasing my work in frontend, XR, and
             design.
