--- a/work.html
+++ b/work.html
@@ -97,14 +97,16 @@
     <section class="work-section">
       <div class="container">
         <h1>My Work</h1>
-        <p>
-          Here are some of my recent projects in UX, XR, and frontend
-          development.
-        </p>
+       <p>
+  Below are some of my recent projects in UX, XR, and frontend development. These projects reflect my passion for creating designs that are not only intuitive and user-friendly but also immersive and engaging. Whether I’m building responsive websites, experimenting with augmented reality, or crafting seamless user interfaces, I put creativity and care into every project to ensure it’s both functional and high-quality.
+</p>
+<p>
+  Each project showcases my dedication to constantly learning and evolving as a designer and developer. I aim to create meaningful experiences that engage users, solve problems, and push the boundaries of what’s possible with technology. Feel free to explore each project in detail to see the tools and techniques I used, along with the unique challenges I faced and how I overcame them.
+</p>
+
 
         <section class="projects-section">
-          <h2 class="section-title">My Work</h2>
-          <div class="projects-grid">
+                    <div class="projects-grid">
             <a class="project-card" href="projects/weather-app.html">
               <img src="../images/weatherapp-frontpage.png" alt="Weather App" />
               <h3>Weather App</h3>
