echo explorer added

--- a/work.html
+++ b/work.html
@@ -119,13 +119,17 @@
             and responsive design.
               </p>
             </a>
-            <a class="project-card" href="projects/portfolio.html">
-              <img src="images/portfolio.jpg" alt="Portfolio Website" />
-              <h3>Portfolio Website</h3>
+
+               <a class="project-card" href="projects/echo-explorer.html">
+              <img src="images/echo1.png" alt="VR singing project" />
+              <h3>Echo Explorer</h3>
               <p>
-                A fully responsive portfolio showcasing my work in frontend, XR,
-                and design.
-              </p>
+            Echo Explorer is a VR experience developed in Unity that combines
+            vocal training, relaxation, and exploration. Set in a peaceful
+            mountain environment, users interact with birds by imitating musical
+            notes to unlock new areas. Created as a group project, it provides a
+            private, judgment-free space for singing practice.
+          </p>
             </a>
             <a class="project-card" href="projects/vr-experience.html">
               <img src="images/vr-experience.jpg" alt="VR Experience" />
