--- a/index.html
+++ b/index.html
@@ -133,13 +133,15 @@
             and responsive design.
           </p>
         </a>
-        <a class="project-card" href="project/echo-explorer.html">
+        <a class="project-card" href="projects/echo-explorer.html">
           <img src="images/echo1.png" alt="VR singing project" />
           <h3>Echo Explorer</h3>
-          <h4>A VR Singing Experience</h4>
           <p>
-            A fully responsive portfolio showcasing my work in frontend, XR, and
-            design.
+            Echo Explorer is a VR experience developed in Unity that combines
+            vocal training, relaxation, and exploration. Set in a peaceful
+            mountain environment, users interact with birds by imitating musical
+            notes to unlock new areas. Created as a group project, it provides a
+            private, judgment-free space for singing practice.
           </p>
         </a>
         <a class="project-card" href="project.html?id=vr-experience">
