images TowAR of London

--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
             private, judgment-free space for singing practice.
           </p>
         </a>
-        <a class="project-card" href="project.html?id=vr-experience">
+        <a class="project-card" href="projects/Towar.html">
           <img
             src="images/project3.jpg"
             alt="VR experience developed in Unity with C#"
           />
-          <h3>VR Experience</h3>
+          <h3>TowAR of London</h3>
           <p>An immersive VR project built using Unity and C#.</p>
         </a>
       </div>
