--- a/work.html
+++ b/work.html
@@ -131,7 +131,7 @@
             private, judgment-free space for singing practice.
           </p>
             </a>
-            <a class="project-card" href="projects/vr-experience.html">
+            <a class="project-card" href="projects/Towar.html">
               <img src="images/vr-experience.jpg" alt="VR Experience" />
               <h3>VR Experience</h3>
               <p>An immersive VR project built using Unity and C#.</p>
