updated the cards

--- a/index.html
+++ b/index.html
@@ -145,12 +145,14 @@
           </p>
         </a>
         <a class="project-card" href="projects/Towar.html">
-          <img
-            src="images/project3.jpg"
-            alt="VR experience developed in Unity with C#"
-          />
+          <img src="images/Towarhand.png" alt="AR tour of Tower of London" />
           <h3>TowAR of London</h3>
-          <p>An immersive VR project built using Unity and C#.</p>
+          <p>
+            TowAR of London is an augmented reality app that blends historical
+            storytelling with navigation mechanics. Created as a group project,
+            the app guides users through Anne Boleyn’s final journey in the
+            Tower of London using AR markers and interactive clues.
+          </p>
         </a>
       </div>
     </section>
