--- a/projects/Towar.html
+++ b/projects/Towar.html
@@ -144,7 +144,7 @@
       </div>
 
       <!-- My Contributions -->
-      <h3>My Contributions</h3>
+      <h3 class="mt-5">My Contributions</h3>
       <p>My main responsibilities in the project included:</p>
       <ul>
         <li>
@@ -171,6 +171,7 @@
 
       <div class="project-images mb-4">
         <img src="../images/towar3.png" class="img-fluid mb-3" />
+        <p>Storyboard (from our notes)</p>
       </div>
 
       <!-- Challenges & Solutions -->
