--- a/work.html
+++ b/work.html
@@ -132,13 +132,17 @@
           </p>
             </a>
             <a class="project-card" href="projects/Towar.html">
-              <img src="images/vr-experience.jpg" alt="VR Experience" />
-              <h3>VR Experience</h3>
-              <p>An immersive VR project built using Unity and C#.</p>
+              <img src="images/Towarhand.png" alt="AR tour of Tower of London" />
+              <h3>TowAR of London</h3>
+              <p> TowAR of London is an augmented reality app that blends historical
+            storytelling with navigation mechanics. Created as a group project,
+            the app guides users through Anne Boleyn’s final journey in the
+            Tower of London using AR markers and interactive clues.</p>
             </a>
           </div>
         </section>
 
+       
     <!-- Footer -->
     <footer class="footer">
       <p>© 2025 Elin Blütecher Holter</p>
