About - New section

--- a/about.html
+++ b/about.html
@@ -185,6 +185,15 @@
       </div>
     </div>
 
+     <!-- 2025 - Freelance -->
+    <div class="timeline-item">
+      <div class="timeline-date"><i class="fas fa-building"></i> 2025 <i class="fa-solid fa-arrow-right"></i></div>
+      <div class="timeline-content">
+        <h3>Freelance </h3>
+        <p>Started freelancing within web and graphic design. My first project involved creating a full website and visual identity for an accounting firm. I'm currently open for new projects in web design, branding, animation, AR/VR, and front-end development as I continue expanding my coding skills.</p>
+      </div>
+    </div>
+
     <!-- 2025 - Moving to Oslo -->
     <div class="timeline-item">
       <div class="timeline-date"><i class="fas fa-city"></i> 2025 <i class="fa-solid fa-arrow-right"></i></div>
